inserting content, starting dropdown

--- a/site/templates/artist.hbs
+++ b/site/templates/artist.hbs
@@ -1,4 +1,4 @@
-<div id='test'>
+<div id='{{{artist_name}}}'>
   <h3>{{artist_name}}</h3>
   <h4>{{city}}</h4>
   <p>City Unigrams: {{city_unigrams}}</p>
