dropdown/selector working

--- a/site/templates/artist.hbs
+++ b/site/templates/artist.hbs
@@ -1,4 +1,4 @@
-<div id='{{{artist_name}}}'>
+<div class="artist_info" id='{{{artist_name}}}' style="display: none;">
   <h3>{{artist_name}}</h3>
   <h4>{{city}}</h4>
   <p>City Unigrams: {{city_unigrams}}</p>
