--- a/site/styles/autocomplete.css
+++ b/site/styles/autocomplete.css
@@ -3,6 +3,11 @@
   justify-content: center;
 }
 
+.artist_info {
+  transition: opacity 1s ease-in;
+}
+
+
 * { box-sizing: border-box; }
 body {
   font: 16px Arial;
