--- a/site/templates/artist.hbs
+++ b/site/templates/artist.hbs
@@ -3,8 +3,8 @@
     <h2 class="mdl-card__title-text">{{artist_name}} – {{city}}</h2>
   </div>
   <div class="mdl-card__supporting-text">
-    <p>City Unigrams: {{city_unigrams}}</p>
-    <p>City Bigrams: {{city_bigrams}}</p>
-    <p>Most common words: {{common_words}}</p>
+    <p><b>City Unigrams:</b> {{city_unigrams}}</p>
+    <p><b>City Bigrams:</b> {{city_bigrams}}</p>
+    <p><b>Most common words:</b> {{common_words}}</p>
   </div>
 </div>
